# vue_3_project

./: pyproject.toml
backend/: app.py  config.py  models.py  resources.py  routes.py  utils.py
backend/celery_tasks/: celery_init.py  task.py
backend/instance/: hospital.sqlite3
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Footer.vue  Navbar.vue
frontend/src/router/: index.js
frontend/src/services/: api.js  auth.js
frontend/src/views/: AdminDashboard.vue  DoctorDashboard.vue  HomeView.vue  LoginView.vue  PatientAppointments.vue  PatientDashboard.vue  PatientMyAppointments.vue  RegisterView.vue
