[project]
name = "hospital"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "celery>=5.6.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "flask-restful>=0.3.10",
    "flask-security-too>=5.7.1",
    "flask-sqlalchemy>=3.1.1",
]
